# CEIA_2025_B3_MLOps1_TP

./: .env  README.md  dec_tree_class_best.dot  docker-compose.yaml
.ipynb_checkpoints/: TP_MLOps-checkpoint.ipynb
airflow/dags/: etl_process_chicago_crimes.py
dockerfiles/airflow/: Dockerfile
dockerfiles/fastapi/: Dockerfile  app.py  requirements.txt
dockerfiles/fastapi/files/: data.json  model_dtc.pkl  model_lda.pkl  pipeline.joblib
dockerfiles/mlflow/: Dockerfile
dockerfiles/postgres/: Dockerfile
notebook_example/: experiment_DTC.ipynb  experiment_LDA.ipynb  optuna_aux.py  pyproject.toml  requirements.txt  samples.ipynb
