[project]
name = "CEIA_2025_B3_MLOps1_TP"
version = "0.1.0"
description = "Curso de Especialización en Inteligencia Artificial, Año 2025, Bimestre 3, materia Operaciones de Aprendizaje Automático, TP"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "awswrangler>=3.12.1",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlflow==3.2.*",
    "optuna>=4.3.0",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "scikit-learn==1.7.1",
    "tqdm>=4.67.1",
]
